<resources>
    <string name="app_name">Foodies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Welcome">Bienvenido</string>
    <string name="Search">Buscar</string>
    <string name="Time">Tiempo</string>MyAdapter
    <string name="LogIn">Iniciar Sesión</string>
    <string name="Mail">Correo electrónico</string>
    <string name="ExampleMail">ejemplo@correo.com</string>
    <string name="Password">Contraseña</string>
    <string name="ExamplePassword">•••••••••</string>
    <string name="SignUp">Crear Cuenta</string>
    <string name="YourEmail">Tu correo electrónico</string>
    <string name="Continue">Continuar</string>
    <string name="YesAccount">¿Ya tienes cuenta?</string>
    <string name="CreateAccount">Crear Cuenta</string>
    <string name="NoAccount">¿No tienes cuenta?</string>
    <string name="Favorites">Favoritos</string>
    <string name="Restaurants">Restaurantes</string>
    <string name="Foods">Alimentos</string>
    <string name="Ubications">Ubicaciones</string>
    <string name="MenuName">Nombre del Menu</string>
    <string name="MenuPrice">Precio</string>
    <string name="Options">Ver opciones</string>
    <string name="Provider">Proveedor</string>
    <string name="Options2">Opciones para adquirir</string>
    <string name="Filter">Filtrar</string>
    <string name="Filter1">Filtrar por precio</string>
    <string name="Filter2">Filtrar por tiempo de comida</string>
</resources>