<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--- MENSAJE DE CREAR CUENTA -->
    <TextView
        android:id="@+id/signupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/SignUp"
        android:textColor="@color/brown"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <!--- MENSAJE DE CORREO ELECTRONICO -->
    <TextView
        android:id="@+id/mailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/asap_bold"
        android:textColor="@color/orange"
        android:text="@string/Mail"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupTextView" />

    <!--- TEXTBOX DE CORREO ELECTRONICO -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:fontFamily="@font/asap_bold"
        android:hint="@string/YourEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailTextView" />

    <!--- MENSAJE DE CONTRASEÑA -->
    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/asap_bold"
        android:textColor="@color/orange"
        android:text="@string/Password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupTextView"/>

    <!--- TEXTBOX DE CONTRASEÑA -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:fontFamily="@font/asap_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

    <!--- BOTON CREAR CUENTA -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueButton"
        android:layout_width="149dp"
        android:layout_height="47dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/corner_view"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/asap_bold"
        android:text="@string/Continue"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <!--- MENSAJE DE SI HAY CUENTA  -->

    <!--- BOTON INICIAR SESION -->
    <TextView
        android:id="@+id/yesaccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/YesAccount"
        android:textColor="@color/greyBlue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login2Button"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/corner_view"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/asap_bold"
        android:text="@string/LogIn"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueButton" />

</androidx.constraintlayout.widget.ConstraintLayout>