<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInFragment">

    <!-- TODO: Update blank fragment layout -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--- MENSAJE DE INICIAR SESION -->
        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/LogIn"
            android:textColor="@color/brown"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.383" />

        <!--- LOGO DE FOODIES -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="186dp"
            android:layout_height="174dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo_foodies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--- MENSAJE DE CORREO O USUARIO -->
        <TextView
            android:id="@+id/mailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/asap_bold"
            android:textColor="@color/orange"
            android:text="@string/Mail"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

        <!--- TEXTBOX DE CORREO O USUARIO -->
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:fontFamily="@font/asap_bold"
            android:hint="@string/ExampleMail"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mailTextView" />

        <!--- MENSAJE DE CONTRASEÑA -->
        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="112dp"
            android:fontFamily="@font/asap_bold"
            android:textColor="@color/orange"
            android:text="@string/Password"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

        <!--- TEXTBOX DE CONTRASEÑA -->
        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="40dp"
            android:ems="10"
            android:inputType="textPassword"
            android:fontFamily="@font/asap_bold"
            android:hint="@string/ExamplePassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.199"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/loginButton"
            android:layout_width="149dp"
            android:layout_height="47dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/corner_view"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/asap_bold"
            android:text="@string/LogIn"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <!--- MENSAJE DE NO HAY CUENTA -->
        <TextView
            android:id="@+id/noAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="136dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/asap_bold"
            android:text="@string/NoAccount"
            android:textColor="@color/greyBlue"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <!--- BOTON DE CREAR CUENTA -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signupButton"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="76dp"
            android:background="@drawable/corner_view"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/asap_bold"
            android:text="@string/SignUp"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>