<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPageActivity"
    android:orientation="vertical">

    <!--- MENSAJE DE BIENVENIDA -->

    <!---BARRA DE BUSQUEDA-->

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="167dp"
        android:layout_height="40dp"
        android:layout_margin="16sp"
        android:layout_marginStart="32dp"

        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/Welcome"
        android:textColor="@color/brown"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filter1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/Filter1"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

    <com.google.android.material.slider.Slider
        android:id="@+id/priceInputSlider"
        android:valueFrom="0"
        android:valueTo="100"
        android:value="0"
        android:layout_marginTop="15dp"
        app:trackColor="@color/lightBlue"
        app:tickColor="@color/greyBlue"
        app:thumbColor="@color/greyBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelStyle="@style/tooltips" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/filterButton"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/corner_view"
        android:fontFamily="@font/asap_bold"
        android:text="@string/Filter"
        android:textColor="@color/greyBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceInputSlider" />

    <TextView
        android:id="@+id/filter2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/Filter2"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceInputSlider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTimes"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceInputSlider"
        android:layout_marginTop="10dp"
        app:layout_constraintVertical_bias="0.1"
        tools:listitem="@layout/item_view" />


</LinearLayout>